tests/dataset/tpc-ds/compiler/c/q45.error
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c: In function ‘test_TPCDS_Q45_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:262:20: error: incompatible types when initializing type ‘const char *’ using type ‘tmp_item_t’
  262 |                    (tmp_item_t){.ca_zip = "99999", .sum_ws_sales_price = 30.0}};
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:265:52: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  265 |   if (test_TPCDS_Q45_simplified_records.len != tmp1.len) {
      |                                                    ^
      |                                                    ->
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:269:61: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  269 |       if (test_TPCDS_Q45_simplified_records.data[i3] != tmp1.data[i3]) {
      |                                                             ^
      |                                                             ->
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:316:7: error: conflicting types for ‘zip_list’; have ‘int’
  316 |   int zip_list = zip_list;
      |       ^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:306:15: note: previous definition of ‘zip_list’ with type ‘list_string’
  306 |   list_string zip_list = list_string_create(9);
      |               ^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:319:7: error: conflicting types for ‘item_ids’; have ‘int’
  319 |   int item_ids = item_ids;
      |       ^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:317:15: note: previous definition of ‘item_ids’ with type ‘list_string’
  317 |   list_string item_ids = list_string_create(1);
      |               ^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:330:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  330 |     _json_string(it.ca_zip);
      |                  ~~^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq453416835652/001/prog.c:338:39: error: incompatible types when assigning to type ‘list_int’ from type ‘base_item_list_t’
  338 |   test_TPCDS_Q45_simplified_records = records;
      |                                       ^~~~~~~
