tests/dataset/tpc-ds/compiler/c/q45.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int qoy = 1;
static int year = 2020;

typedef struct {
  const char *ca_zip;
  double sum_ws_sales_price;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *ca_zip;
  double sum_ws_sales_price;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int bill_customer_sk;
  int item_sk;
  int sold_date_sk;
  double sales_price;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  int c_current_addr_sk;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  const char *ca_zip;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  const char *i_item_id;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_qoy;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *ca_zip;
  double sum_ws_sales_price;
} base_item_t;
typedef struct {
  int len;
  base_item_t *data;
} base_item_list_t;
base_item_list_t create_base_item_list(int len) {
  base_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(base_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q45_simplified_records;
static void test_TPCDS_Q45_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.ca_zip = "85669", .sum_ws_sales_price = 50.0},
                   (tmp_item_t){.ca_zip = "99999", .sum_ws_sales_price = 30.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q45_simplified_records.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q45_simplified_records.len; i3++) {
      if (test_TPCDS_Q45_simplified_records.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  web_sale_t web_sales[] = {(web_sale_t){.bill_customer_sk = 1,
                                         .item_sk = 1,
                                         .sold_date_sk = 1,
                                         .sales_price = 50.0},
                            (web_sale_t){.bill_customer_sk = 2,
                                         .item_sk = 2,
                                         .sold_date_sk = 1,
                                         .sales_price = 30.0}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  customer_t customer[] = {
      (customer_t){.c_customer_sk = 1, .c_current_addr_sk = 1},
      (customer_t){.c_customer_sk = 2, .c_current_addr_sk = 2}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_zip = "85669"},
      (customer_addres_t){.ca_address_sk = 2, .ca_zip = "99999"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  item_t item[] = {(item_t){.i_item_sk = 1, .i_item_id = "I1"},
                   (item_t){.i_item_sk = 2, .i_item_id = "I2"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_qoy = 1, .d_year = 2020}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  list_string zip_list = list_string_create(9);
  zip_list.data[0] = "85669";
  zip_list.data[1] = "86197";
  zip_list.data[2] = "88274";
  zip_list.data[3] = "83405";
  zip_list.data[4] = "86475";
  zip_list.data[5] = "85392";
  zip_list.data[6] = "85460";
  zip_list.data[7] = "80348";
  zip_list.data[8] = "81792";
  int zip_list = zip_list;
  list_string item_ids = list_string_create(1);
  item_ids.data[0] = "I2";
  int item_ids = item_ids;
  base_item_list_t base = (base_item_list_t){0, NULL};
  base_item_list_t records = base;
  printf("[");
  for (int i4 = 0; i4 < records.len; i4++) {
    if (i4 > 0)
      printf(",");
    base_item_t it = records.data[i4];
    printf("{");
    _json_string("ca_zip");
    printf(":");
    _json_string(it.ca_zip);
    printf(",");
    _json_string("sum_ws_sales_price");
    printf(":");
    _json_float(it.sum_ws_sales_price);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q45_simplified_records = records;
  test_TPCDS_Q45_simplified();
  return 0;
}
